--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -49,3 +49,6 @@ mark_ability_qianggong:
 mark_ability_guanghua:
   name: 光滑
   description: 自身闪避率增加10%
+mark_ability_hongxin:
+  name: 红心
+  description: 增加自身5%命中率
