--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -133,3 +133,9 @@ pet_weiniqiujiu:
 pet_kadunqiujiu:
   name: 卡顿啾啾
   description: 最终进化形态 拥有强大的力量和温柔的内心 能够释放满天红心的绚烂技能
+pet_xiaoyuetu:
+  name: 晓月兔
+  description: 晓月兔来自晓晓和月月的合体 合体后的晓月兔能在日光下自由的奔跑了
+pet_fuxiaotu:
+  name: 拂晓兔
+  description: 感受着来自心灵的交流 它在朦胧、静谧的佛晓之刻领悟到了最强的必杀
