--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -31,7 +31,7 @@ stat_stage_spe_up:
 mark_meihuo:
   name: 魅惑
   description: 无法行动
-mark_hapa:
+mark_haipa:
   name: 害怕
   description: 无法行动
 mark_tanhuan:
